disable depth buffer emulation by default

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -133,13 +133,8 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Extreme-G (U)
 frameBufferEmulation\N64DepthCompare=1
 
-[EXTREME%20G%202]
-Good_Name=Extreme-G XG2 (E)(U)
-frameBufferEmulation\copyDepthToRDRAM=0
-
 [208E05CD]
 Good_Name=Extreme-G XG2 (J)
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [F1%20POLE%20POSITION%2064]
 Good_Name=F-1 Pole Position 64 (E)(U)
@@ -239,7 +234,6 @@ Good_Name=Mario No Photopi (J)
 [MARIO%20STORY]
 Good_Name=Mario Story (J)
 frameBufferEmulation\copyToRDRAM=1
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [MARIOTENNIS]
 Good_Name=Mario Tennis (E)(U)
@@ -273,12 +267,10 @@ Good_Name=Nushi Duri 64 - Shiokaze Ni Notte (J)
 [PAPER%20MARIO]
 Good_Name=Paper Mario (E)(U)
 frameBufferEmulation\copyToRDRAM=1
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [PENNY%20RACERS]
 Good_Name=Penny Racers (E)(U)
 frameBufferEmulation\copyToRDRAM=0
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [PERFECT%20DARK]
 Good_Name=Perfect Dark (E)(J)(U)
@@ -292,12 +284,10 @@ frameBufferEmulation\detectCFB=1
 [POKEMON%20STADIUM%202]
 Good_Name=Pokemon Stadium 2 (E)(F)(G)(I)(J)(S)(U)
 frameBufferEmulation\copyToRDRAM=0
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [POKEMON%20STADIUM%20G&S]
 Good_Name=Pokemon Stadium Kin Gin (J)
 frameBufferEmulation\copyToRDRAM=0
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [RAYMAN%202]
 Good_Name=Rayman 2 - The Great Escape (E)(U)
@@ -308,21 +298,12 @@ frameBufferEmulation\detectCFB=1
 Good_Name=Resident Evil 2 (E)(U)
 frameBufferEmulation\detectCFB=1
 
-[ROADSTERS%20TROPHY]
-Good_Name=Roadsters Trophy (E)(U)
-frameBufferEmulation\copyDepthToRDRAM=0
-
 [437009B9]
 Good_Name=Saikyou Habu Shougi (J)
 
 [RUSH%202049]
 Good_Name=San Francisco Rush 2049 (E)(U)
 frameBufferEmulation\copyToRDRAM=0
-frameBufferEmulation\copyDepthToRDRAM=0
-
-[SHADOWGATE64]
-Good_Name=Shadowgate 64 - Trials Of The Four Towers (E)(J)(U)
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [1C500641]
 Good_Name=Snobow Kids (J)
@@ -330,7 +311,6 @@ Good_Name=Snobow Kids (J)
 [SPACE%20INVADERS]
 Good_Name=Space Invaders (U)
 frameBufferEmulation\copyToRDRAM=0
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [STARCRAFT%2064]
 Good_Name=Star Craft 64 (E)(G)(U)
@@ -346,12 +326,12 @@ Good_Name=Star Twins (J)
 frameBufferEmulation\copyFromRDRAM=1
 frameBufferEmulation\copyToRDRAM=0
 
+[STAR%20WARS%20EP1%20RACER]
+Good_Name=Star Wars Episode I - Racer (E)(U)(J)
+frameBufferEmulation\copyDepthToRDRAM=1
+
 [67ED0B45]
 Good_Name=Super Robot Taisen 64 (J)
-
-[SMASH%20BROTHERS]
-Good_Name=Super Smash Bros. (A)(E)(U) / Nintendo All-Star! Dairantou Smash Brothers (J)
-frameBufferEmulation\copyDepthToRDRAM=0
 
 [622D0C12]
 Good_Name=Susume! Taisen Puzzle Dama - Toukon! Marutama Chou (J)
@@ -386,6 +366,10 @@ frameBufferEmulation\detectCFB=1
 
 [48460A35]
 Good_Name=Ucchan Nanchan No Hono No Challenger - Denryuu Ira Ira Bou (J)
+
+[VIGILANTE%208]
+Good_Name=Vigilante 8 (E)(F)(G)(U)
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [4C2E093B]
 Good_Name=Virtual Pro Wrestling 2 - Oudou Keishou (J)
