--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -33,6 +33,14 @@ Good_Name=Bakushou Jinsei 64 - Mezase! Resort Ou (J)
 Good_Name=Banjo-Kazooie (E)(U) / Banjo To Kazooie No Daibouken (J)
 frameBufferEmulation\copyToRDRAM=1
 
+[BANJO%20KAZOOIE%202]
+Good_Name=Banjo to Kazooie no Daibouken 2 (J)
+frameBufferEmulation\copyToRDRAM=1
+
+[BANJO%20TOOIE]
+Good_Name=Banjo-Tooie (E)(U)
+frameBufferEmulation\copyToRDRAM=1
+
 [BEETLE%20ADVENTURE%20RAC]
 Good_Name=Beetle Adventure Racing (E)(U)
 frameBufferEmulation\copyToRDRAM=1
@@ -54,6 +62,7 @@ frameBufferEmulation\detectCFB=1
 
 [52150A67]
 Good_Name=Bokujou Monogatari 2 (J)
+frameBufferEmulation\N64DepthCompare=1
 
 [476C09C1]
 Good_Name=Bomberman Hero - Mirian Oujo Wo Sukue! (J)
@@ -99,11 +108,13 @@ frameBufferEmulation\copyDepthToRDRAM=1
 Good_Name=Donkey Kong 64 (E)(J)(U)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\detectCFB=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [D%20K%20DISPLAY]
 Good_Name=Donkey Kong 64 Kiosk Demo (U)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\detectCFB=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [72390C86]
 Good_Name=Doraemon - Nobita To 3tsu No Seireiseki (J)
@@ -120,6 +131,9 @@ frameBufferEmulation\copyFromRDRAM=1
 
 [67000C2B]
 Good_Name=Eikou No Saint Andrews (J)
+
+[EXCITEBIKE64]
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [EXTREME_G]
 Good_Name=Extreme-G (E)
@@ -250,6 +264,7 @@ frameBufferEmulation\copyToRDRAM=1
 [MICKEY%20USA]
 Good_Name=Mickey's Speedway USA (U) / Mickey No Racing Challenge USA (J)
 frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [293D0695]
 Good_Name=Morita Shougi 64 (J)
@@ -335,6 +350,9 @@ Good_Name=Super Robot Taisen 64 (J)
 
 [622D0C12]
 Good_Name=Susume! Taisen Puzzle Dama - Toukon! Marutama Chou (J)
+
+[TWISTED%20EDGE]
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [ZELDA%20MAJORA%27S%20MASK]
 Good_Name=The Legend Of Zelda - Majora's Mask (E)(U) / Zelda No Densetsu - Mujura No Karmen (J)
