Add some educated depth buffer to RDRAM guesses.
Knowing which games want depth buffer to RDRAM is really hard. For now, I think it should be enabled for the notorious suspects -- Rareware racing and platforming games.

--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -32,6 +32,17 @@ Good_Name=Bakushou Jinsei 64 - Mezase! Resort Ou (J)
 [BANJO-KAZOOIE]
 Good_Name=Banjo-Kazooie (E)(U) / Banjo To Kazooie No Daibouken (J)
 frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
+
+[BANJO%20KAZOOIE%202]
+Good_Name=Banjo to Kazooie no Daibouken 2 (J)
+frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
+
+[BANJO%20TOOIE]
+Good_Name=Banjo-Tooie (E)(U)
+frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [BEETLE%20ADVENTURE%20RAC]
 Good_Name=Beetle Adventure Racing (E)(U)
@@ -83,6 +94,10 @@ frameBufferEmulation\copyDepthToRDRAM=1
 [362D06B6]
 Good_Name=Densha de Go! 64 (J)
 
+[Diddy%20Kong%20Racing]
+Good_Name=Diddy Kong Racing (E)(U)(J)
+frameBufferEmulation\copyDepthToRDRAM=1
+
 [DONALD%20DUCK%20GOIN%27%20QU]
 Good_Name=Donald Duck - Goin' Quackers (U)
 frameBufferEmulation\copyToRDRAM=1
@@ -99,11 +114,13 @@ frameBufferEmulation\copyDepthToRDRAM=1
 Good_Name=Donkey Kong 64 (E)(J)(U)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\detectCFB=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [D%20K%20DISPLAY]
 Good_Name=Donkey Kong 64 Kiosk Demo (U)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\detectCFB=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [72390C86]
 Good_Name=Doraemon - Nobita To 3tsu No Seireiseki (J)
@@ -246,10 +263,12 @@ frameBufferEmulation\copyToRDRAM=1
 [MICKEY%20USA%20PAL]
 Good_Name=Mickey's Speedway USA (E)
 frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [MICKEY%20USA]
 Good_Name=Mickey's Speedway USA (U) / Mickey No Racing Challenge USA (J)
 frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [293D0695]
 Good_Name=Morita Shougi 64 (J)
