--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -44,10 +44,12 @@ frameBufferEmulation\copyToRDRAM=1
 [BEETLE%20ADVENTURE%20RAC]
 Good_Name=Beetle Adventure Racing (E)(U)
 frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [BEETLE%20ADVENTURE%20JP]
 Good_Name=Beetle Adventure Racing (J)
 frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [BIOFREAKS]
 Good_Name=Bio F.R.E.A.K.S. (E)(U)
@@ -60,6 +62,8 @@ frameBufferEmulation\detectCFB=1
 
 [52150A67]
 Good_Name=Bokujou Monogatari 2 (J)
+frameBufferEmulation\copyDepthToRDRAM=1
+frameBufferEmulation\N64DepthCompare=1
 
 [476C09C1]
 Good_Name=Bomberman Hero - Mirian Oujo Wo Sukue! (J)
