--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -11,24 +11,6 @@ Good_Name=1080 Snowboarding (E)(JU)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
-[6D120CBF]
-Good_Name=64 De Hakken!! Tamagotchi - Minna De Tamagotchi World (J)
-
-[68DD0BB5]
-Good_Name=64 Hanafuda - Tenshi No Yakusoku (J)
-
-[1F580575]
-Good_Name=64 Oozumou 2 (J)
-
-[1333047D]
-Good_Name=AI Shougi 3 (J)
-
-[30080737]
-Good_Name=Air Boarder 64 (J)
-
-[44BB08DC]
-Good_Name=Bakushou Jinsei 64 - Mezase! Resort Ou (J)
-
 [BANJO-KAZOOIE]
 Good_Name=Banjo-Kazooie (E)(U) / Banjo To Kazooie No Daibouken (J)
 frameBufferEmulation\copyToRDRAM=1
@@ -64,12 +46,6 @@ frameBufferEmulation\detectCFB=1
 Good_Name=Bokujou Monogatari 2 (J)
 frameBufferEmulation\N64DepthCompare=1
 
-[476C09C1]
-Good_Name=Bomberman Hero - Mirian Oujo Wo Sukue! (J)
-
-[13E50365]
-Good_Name=Choro Q 64 2 - Hacha Mecha Grand Prix Race (J)
-
 [CASTLEVANIA]
 Good_Name=Castlevania (E)(U)
 frameBufferEmulation\copyToRDRAM=1
@@ -78,22 +54,10 @@ frameBufferEmulation\copyToRDRAM=1
 Good_Name=Castlevania - Legacy Of Darkness (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 
-[3D9F08DB]
-Good_Name=Chou Kuukan Nighter Pro Yakyuu King 2 (J)
-
-[31DC0863]
-Good_Name=Chou Snobow Kids (J)
-
 [CONKER%20BFD]
 Good_Name=Conker's Bad Fur Day (E)(U)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\copyDepthToRDRAM=1
-
-[362D06B6]
-Good_Name=Densha de Go! 64 (J)
-
-[Diddy%20Kong%20Racing]
-Good_Name=Diddy Kong Racing (E)(U)(J)
 
 [DONALD%20DUCK%20GOIN%27%20QU]
 Good_Name=Donald Duck - Goin' Quackers (U)
@@ -119,21 +83,9 @@ frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
-[72390C86]
-Good_Name=Doraemon - Nobita To 3tsu No Seireiseki (J)
-
-[6E3D0C76]
-Good_Name=Doraemon 2 - Nobita To Hikari No Shinden (J)
-
-[84CE0BDF]
-Good_Name=Doraemon 3 - Nobita No Machi SOS! (J)
-
 [DR.MARIO%2064]
 Good_Name=Dr. Mario 64 (U)
 frameBufferEmulation\copyFromRDRAM=1
-
-[67000C2B]
-Good_Name=Eikou No Saint Andrews (J)
 
 [EXTREME_G]
 Good_Name=Extreme-G (E)
@@ -147,9 +99,6 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Extreme-G (U)
 frameBufferEmulation\N64DepthCompare=1
 
-[208E05CD]
-Good_Name=Extreme-G XG2 (J)
-
 [F1%20POLE%20POSITION%2064]
 Good_Name=F-1 Pole Position 64 (E)(U)
 frameBufferEmulation\copyToRDRAM=1
@@ -158,52 +107,19 @@ frameBufferEmulation\copyToRDRAM=1
 Good_Name=F-Zero X (E)(J)(U)
 frameBufferEmulation\copyToRDRAM=1
 
-[18000458]
-Good_Name=Famista 64 (J)
-
-[2997071D]
-Good_Name=Fushigi No Dungeon - Fuurai No Shiren 2 - Oni Shuurai! Shiren Jou! (J)
-
-[3BE3091D]
-Good_Name=Ganbare Goemon - Neo Momoyama Bakufu No Odori (J)
-
-[53900B10]
-Good_Name=Goemon - Mononoke Sugoroku (J)
-
-[457A0908]
-Good_Name=Hamster Monogatari 64 (J)
-
 [HARVESTMOON64]
 Good_Name=Harvest Moon 64 (U)
 frameBufferEmulation\N64DepthCompare=1
-
-[5CFA0A2E]
-Good_Name=Heiwa Pachinko World 64 (J)
 
 [HEXEN]
 Good_Name=Hexen (E)(F)(G)(J)(U)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\detectCFB=1
 
-[30AB07E1]
-Good_Name=Hiryuu No Ken Twin (J)
-
 [HSV%20ADVENTURE%20RACING]
 Good_Name=HSV Adventure Racing (A)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\copyDepthToRDRAM=1
-
-[83CA0DCA]
-Good_Name=Ide Yousuke No Mahjong Juku (J)
-
-[43CC08A2]
-Good_Name=J.League Dynamite Soccer 64 (J)
-
-[7EA50BA0]
-Good_Name=J.League Eleven Beat 1997 (J)
-
-[31E0076F]
-Good_Name=Jangou Simulation Mahjong Dou 64 (J)
 
 [JET%20FORCE%20GEMINI]
 Good_Name=Jet Force Gemini (E)(U)
@@ -217,9 +133,6 @@ frameBufferEmulation\copyToRDRAM=0
 Good_Name=Jet Force Gemini Kiosk Demo (U)
 frameBufferEmulation\copyFromRDRAM=1
 frameBufferEmulation\copyToRDRAM=0
-
-[713F0C09]
-Good_Name=Kiratto Kaiketsu! 64 Tanteidan (J)
 
 [LEGORACERS]
 Good_Name=Lego Racers (E)(U)
@@ -242,9 +155,6 @@ frameBufferEmulation\copyDepthToRDRAM=1
 Good_Name=Mario Kart 64 (E)(J)(U)
 frameBufferEmulation\copyToRDRAM=1
 
-[2B6D07C8]
-Good_Name=Mario No Photopi (J)
-
 [MARIO%20STORY]
 Good_Name=Mario Story (J)
 frameBufferEmulation\copyToRDRAM=1
@@ -264,19 +174,11 @@ frameBufferEmulation\copyToRDRAM=1
 [MICKEY%20USA]
 Good_Name=Mickey's Speedway USA (U) / Mickey No Racing Challenge USA (J)
 frameBufferEmulation\copyToRDRAM=1
-
-[293D0695]
-Good_Name=Morita Shougi 64 (J)
+frameBufferEmulation\copyDepthToRDRAM=1
 
 [MS.%20PAC-MAN%20MM]
 Good_Name=Ms. Pac-Man - Maze Madness (U)
 frameBufferEmulation\detectCFB=1
-
-[14B30473]
-Good_Name=Nushi Duri 64 (J)
-
-[5E5A0B37]
-Good_Name=Nushi Duri 64 - Shiokaze Ni Notte (J)
 
 [PAPER%20MARIO]
 Good_Name=Paper Mario (E)(U)
@@ -312,15 +214,9 @@ frameBufferEmulation\detectCFB=1
 Good_Name=Resident Evil 2 (E)(U)
 frameBufferEmulation\detectCFB=1
 
-[437009B9]
-Good_Name=Saikyou Habu Shougi (J)
-
 [RUSH%202049]
 Good_Name=San Francisco Rush 2049 (E)(U)
 frameBufferEmulation\copyToRDRAM=0
-
-[1C500641]
-Good_Name=Snobow Kids (J)
 
 [SPACE%20INVADERS]
 Good_Name=Space Invaders (U)
@@ -343,12 +239,6 @@ frameBufferEmulation\copyToRDRAM=0
 [STAR%20WARS%20EP1%20RACER]
 Good_Name=Star Wars Episode I - Racer (E)(U)(J)
 frameBufferEmulation\copyDepthToRDRAM=1
-
-[67ED0B45]
-Good_Name=Super Robot Taisen 64 (J)
-
-[622D0C12]
-Good_Name=Susume! Taisen Puzzle Dama - Toukon! Marutama Chou (J)
 
 [ZELDA%20MAJORA%27S%20MASK]
 Good_Name=The Legend Of Zelda - Majora's Mask (E)(U) / Zelda No Densetsu - Mujura No Karmen (J)
@@ -378,21 +268,9 @@ frameBufferEmulation\N64DepthCompare=1
 Good_Name=Tonic Trouble (E)(U)
 frameBufferEmulation\detectCFB=1
 
-[48460A35]
-Good_Name=Ucchan Nanchan No Hono No Challenger - Denryuu Ira Ira Bou (J)
-
 [VIGILANTE%208]
 Good_Name=Vigilante 8 (E)(F)(G)(U)
 frameBufferEmulation\copyDepthToRDRAM=1
-
-[4C2E093B]
-Good_Name=Virtual Pro Wrestling 2 - Oudou Keishou (J)
-
-[8B6F0CBE]
-Good_Name=Virtual Pro Wrestling 64 (J)
-
-[34060655]
-Good_Name=WWF Wrestlemania 2000 (J)
 
 [THE%20MASK%20OF%20MUJURA]
 Good_Name=Zelda No Densetsu - Mujura No Karmen (J)
