--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -87,6 +87,9 @@ frameBufferEmulation\copyDepthToRDRAM=1
 Good_Name=Dr. Mario 64 (U)
 frameBufferEmulation\copyFromRDRAM=1
 
+[EXCITEBIKE64]
+frameBufferEmulation\copyDepthToRDRAM=1
+
 [EXTREME_G]
 Good_Name=Extreme-G (E)
 frameBufferEmulation\N64DepthCompare=1
