--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -243,6 +243,9 @@ frameBufferEmulation\copyToRDRAM=0
 Good_Name=Star Wars Episode I - Racer (E)(U)(J)
 frameBufferEmulation\copyDepthToRDRAM=1
 
+[TWISTED%20EDGE]
+frameBufferEmulation\copyDepthToRDRAM=1
+
 [ZELDA%20MAJORA%27S%20MASK]
 Good_Name=The Legend Of Zelda - Majora's Mask (E)(U) / Zelda No Densetsu - Mujura No Karmen (J)
 frameBufferEmulation\copyToRDRAM=1
