--- a/src/GLideNHQ/CMakeLists.txt
+++ b/src/GLideNHQ/CMakeLists.txt
@@ -20,11 +20,11 @@ set(GLideNHQ_SOURCES
   TxUtil.cpp
 )
 
-if(PANDORA)
-include_directories( osal )
-else(PANDORA)
-include_directories( inc osal )
-endif(PANDORA)
+if(PANDORA OR BCMHOST)
+  include_directories( osal )
+else(PANDORA OR BCMHOST)
+  include_directories( inc osal )
+endif(PANDORA OR BCMHOST)
 LINK_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/lib )
 
 if(UNIX)
@@ -92,10 +92,19 @@ if( NOT GHQCHK )
       set_target_properties(GLideNHQd PROPERTIES LINK_SEARCH_START_STATIC 1)
       set_target_properties(GLideNHQd PROPERTIES LINK_SEARCH_END_STATIC 1)
 
-      target_link_libraries(GLideNHQd PRIVATE
-            ${CMAKE_CURRENT_SOURCE_DIR}/lib/libpng.a
-            ${CMAKE_CURRENT_SOURCE_DIR}/lib/libz.a
-       )
+      if(BCMHOST)
+        FIND_PACKAGE( ZLIB REQUIRED )
+        FIND_PACKAGE( PNG REQUIRED )
+        target_link_libraries(GLideNHQd
+          ${PNG_LIBRARIES}
+          ${ZLIB_LIBRARIES}
+        )
+      else(BCMHOST)
+        target_link_libraries(GLideNHQd PRIVATE
+          ${CMAKE_CURRENT_SOURCE_DIR}/lib/libpng.a
+          ${CMAKE_CURRENT_SOURCE_DIR}/lib/libz.a
+        )
+      endif(BCMHOST)
     endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
 
     if( CMAKE_BUILD_TYPE STREQUAL "Release")
@@ -111,6 +120,13 @@ if( NOT GHQCHK )
               /mnt/utmp/codeblocks/usr/lib/libpng.a
               /mnt/utmp/codeblocks/usr/lib/libz.a
          )
+      elseif(BCMHOST)
+        FIND_PACKAGE( ZLIB REQUIRED )
+        FIND_PACKAGE( PNG REQUIRED )
+        target_link_libraries(GLideNHQ
+          ${PNG_LIBRARIES}
+          ${ZLIB_LIBRARIES}
+        )
       else(PANDORA)
         target_link_libraries(GLideNHQ PRIVATE
               ${CMAKE_CURRENT_SOURCE_DIR}/lib/libpng.a
