cmake: add gcc version check
C++11 features like std::map::emplace need gcc version >= 4.8.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -176,10 +176,15 @@ else(GLES2)
 endif(GLES2)
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-	SET(GCC_CPP11_COMPILE_FLAGS "-std=c++0x -static-libgcc -static-libstdc++")
-	SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_CPP11_COMPILE_FLAGS}" )
-	SET(GCC_STATIC_LINK_FLAGS "-static-libgcc -static-libstdc++")
-	SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_STATIC_LINK_FLAGS}" )
+  #check for G++ 4.8+
+  execute_process(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE G++_VERSION)
+  if (G++_VERSION VERSION_LESS 4.8)
+	message(SEND_ERROR "You need at least G++ 4.8 to compile GLideN64!")
+  endif()
+  SET(GCC_CPP11_COMPILE_FLAGS "-std=c++0x -static-libgcc -static-libstdc++")
+  SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_CPP11_COMPILE_FLAGS}" )
+  SET(GCC_STATIC_LINK_FLAGS "-static-libgcc -static-libstdc++")
+  SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_STATIC_LINK_FLAGS}" )
 endif()
 
 add_library( ${GLideN64_DLL_NAME} SHARED ${GLideN64_SOURCES})
@@ -215,4 +220,3 @@ if( CMAKE_BUILD_TYPE STREQUAL "Release")
 	target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
   endif(SDL)
 endif( CMAKE_BUILD_TYPE STREQUAL "Release")
-
