--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -1,6 +1,6 @@
 ; Custom game settings
 [General]
-version=4
+version=5
 
 [TWINE]
 Good_Name=007 - The World Is Not Enough (E)(U)
@@ -8,7 +8,7 @@ frameBufferEmulation\N64DepthCompare=1
 
 [1080%20SNOWBOARDING]
 Good_Name=1080 Snowboarding (E)(JU)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [6D120CBF]
@@ -31,24 +31,24 @@ Good_Name=Bakushou Jinsei 64 - Mezase! Resort Ou (J)
 
 [BANJO-KAZOOIE]
 Good_Name=Banjo-Kazooie (E)(U) / Banjo To Kazooie No Daibouken (J)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [BANJO%20KAZOOIE%202]
 Good_Name=Banjo to Kazooie no Daibouken 2 (J)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [BANJO%20TOOIE]
 Good_Name=Banjo-Tooie (E)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [BEETLE%20ADVENTURE%20RAC]
 Good_Name=Beetle Adventure Racing (E)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [BEETLE%20ADVENTURE%20JP]
 Good_Name=Beetle Adventure Racing (J)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [BIOFREAKS]
@@ -72,7 +72,7 @@ Good_Name=Choro Q 64 2 - Hacha Mecha Grand Prix Race (J)
 
 [CASTLEVANIA]
 Good_Name=Castlevania (E)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [CASTLEVANIA2]
 Good_Name=Castlevania - Legacy Of Darkness (E)(U)
@@ -86,7 +86,7 @@ Good_Name=Chou Snobow Kids (J)
 
 [CONKER%20BFD]
 Good_Name=Conker's Bad Fur Day (E)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [362D06B6]
@@ -94,25 +94,26 @@ Good_Name=Densha de Go! 64 (J)
 
 [DONALD%20DUCK%20GOIN%27%20QU]
 Good_Name=Donald Duck - Goin' Quackers (U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [DONALD%20DUCK%20QUACK%20AT]
 Good_Name=Donald Duck - Quack Attack (E)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [DONKEY%20KONG%2064]
 Good_Name=Donkey Kong 64 (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=1
+; set to 1 for correct HUD in pause menu
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [D%20K%20DISPLAY]
 Good_Name=Donkey Kong 64 Kiosk Demo (U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\detectCFB=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
@@ -156,7 +157,7 @@ frameBufferEmulation\copyToRDRAM=1
 
 [F-ZERO%20X]
 Good_Name=F-Zero X (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [18000458]
 Good_Name=Famista 64 (J)
@@ -179,6 +180,7 @@ frameBufferEmulation\N64DepthCompare=1
 
 [5CFA0A2E]
 Good_Name=Heiwa Pachinko World 64 (J)
+frameBufferEmulation\copyToRDRAM=1
 
 [HEXEN]
 Good_Name=Hexen (E)(F)(G)(J)(U)
@@ -190,7 +192,7 @@ Good_Name=Hiryuu No Ken Twin (J)
 
 [HSV%20ADVENTURE%20RACING]
 Good_Name=HSV Adventure Racing (A)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [83CA0DCA]
@@ -223,7 +225,7 @@ Good_Name=Kiratto Kaiketsu! 64 Tanteidan (J)
 
 [LEGORACERS]
 Good_Name=Lego Racers (E)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\detectCFB=1
 
 [76910A78]
@@ -235,36 +237,37 @@ frameBufferEmulation\N64DepthCompare=1
 
 [MARIOGOLF64]
 Good_Name=Mario Golf (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [MARIOKART64]
 Good_Name=Mario Kart 64 (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [2B6D07C8]
 Good_Name=Mario No Photopi (J)
 
 [MARIO%20STORY]
 Good_Name=Mario Story (J)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [MARIOTENNIS]
 Good_Name=Mario Tennis (E)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [MARIOTENNIS64]
 Good_Name=Mario Tennis 64 (J)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [MICKEY%20USA%20PAL]
 Good_Name=Mickey's Speedway USA (E)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyDepthToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [MICKEY%20USA]
 Good_Name=Mickey's Speedway USA (U) / Mickey No Racing Challenge USA (J)
-frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\copyDepthToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [293D0695]
 Good_Name=Morita Shougi 64 (J)
@@ -281,7 +284,7 @@ Good_Name=Nushi Duri 64 - Shiokaze Ni Notte (J)
 
 [PAPER%20MARIO]
 Good_Name=Paper Mario (E)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 
 [PENNY%20RACERS]
 Good_Name=Penny Racers (E)(U)
@@ -289,7 +292,7 @@ frameBufferEmulation\copyToRDRAM=0
 
 [PERFECT%20DARK]
 Good_Name=Perfect Dark (E)(J)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [PUZZLE%20LEAGUE%20N64]
@@ -304,9 +307,14 @@ frameBufferEmulation\copyToRDRAM=0
 Good_Name=Pokemon Stadium Kin Gin (J)
 frameBufferEmulation\copyToRDRAM=0
 
+[QUAKE%20II]
+Good_Name=Quake II (U)
+; set to 1 for correct HUD in pause menu
+frameBufferEmulation\copyToRDRAM=2
+
 [RAYMAN%202]
 Good_Name=Rayman 2 - The Great Escape (E)(U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\detectCFB=1
 
 [RESIDENT%20EVIL%20II]
@@ -356,12 +364,12 @@ frameBufferEmulation\copyDepthToRDRAM=1
 
 [ZELDA%20MAJORA%27S%20MASK]
 Good_Name=The Legend Of Zelda - Majora's Mask (E)(U) / Zelda No Densetsu - Mujura No Karmen (J)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [MAJORA%27S%20MASK]
 Good_Name=The Legend Of Zelda - Majora's Mask Demo (U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [THE%20LEGEND%20OF%20ZELDA]
@@ -380,6 +388,7 @@ frameBufferEmulation\N64DepthCompare=1
 
 [TONIC%20TROUBLE]
 Good_Name=Tonic Trouble (E)(U)
+frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\detectCFB=1
 
 [48460A35]
@@ -400,7 +409,7 @@ Good_Name=WWF Wrestlemania 2000 (J)
 
 [THE%20MASK%20OF%20MUJURA]
 Good_Name=Zelda No Densetsu - Mujura No Karmen (J)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyToRDRAM=2
 frameBufferEmulation\copyDepthToRDRAM=1
 
 [7BC50D43]
