Do not use local freetype installation on Linux.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -150,11 +150,11 @@ if(PANDORA)
    )
 endif(PANDORA)
 
-if(BCMHOST)
+if(UNIX OR BCMHOST)
   SET( FREETYPE_INCLUDE_DIRS "/usr/include/freetype2/" )
-else(BCMHOST)
+else(UNIX OR BCMHOST)
   SET( ENV{FREETYPE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/../../freetype )
-endif(BCMHOST)
+endif(UNIX OR BCMHOST)
 FIND_PACKAGE( Freetype REQUIRED )
 include_directories( ${FREETYPE_INCLUDE_DIRS} )
 
