--- a/ini/GLideN64.custom.ini
+++ b/ini/GLideN64.custom.ini
@@ -308,7 +308,10 @@ frameBufferEmulation\detectCFB=1
 
 [POKEMON%20SNAP]
 Good_Name=Pokemon Snap (U)
-frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\copyAuxToRDRAM=1
+frameBufferEmulation\copyToRDRAM=0
+frameBufferEmulation\copyDepthToRDRAM=0
+frameBufferEmulation\copyFromRDRAM=1
 
 [POKEMON%20STADIUM%202]
 Good_Name=Pokemon Stadium 2 (E)(F)(G)(I)(J)(S)(U)
