Add support for building without GLideNHQ

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,8 +105,15 @@ endif(MUPENPLUSAPI)
 
 add_subdirectory( osal )
 include_directories( osal )
-add_subdirectory( GLideNHQ )
-include_directories( GLideNHQ )
+
+if (NOHQ)
+  list(APPEND GLideN64_SOURCES
+    TxFilterStub.cpp
+  )
+else (NOHQ)
+  add_subdirectory( GLideNHQ )
+  include_directories( GLideNHQ )
+endif(NOHQ)
 
 if(UNIX)
   list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_UNIX})
@@ -226,9 +233,17 @@ if( CMAKE_BUILD_TYPE STREQUAL "Debug")
   )
 
   if(SDL)
-	target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osald GLideNHQd )
+        if (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osald )
+	else (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osald GLideNHQd )
+	endif (NOHQ)
   else(SDL)
-	target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osald GLideNHQd )
+	if (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osald )
+	else (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osald GLideNHQd )
+	endif (NOHQ)
   endif(SDL)
 endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
 
@@ -242,8 +257,16 @@ if( CMAKE_BUILD_TYPE STREQUAL "Release")
   )
 
   if(SDL)
-	target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
+	if (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osal )
+	else (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
+	endif (NOHQ)
   else(SDL)
-	target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
+	if (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osal )
+	else (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
+	endif (NOHQ)
   endif(SDL)
 endif( CMAKE_BUILD_TYPE STREQUAL "Release")
