Cleanup NOHQ code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,14 +106,14 @@ endif(MUPENPLUSAPI)
 add_subdirectory( osal )
 include_directories( osal )
 
-if (NOT NOHQ)
+if (NOHQ)
+  list(APPEND GLideN64_SOURCES
+    TxFilterStub.cpp
+  )
+else (NOHQ)
   add_subdirectory( GLideNHQ )
   include_directories( GLideNHQ )
-else (NOT NOHQ)
-  list(APPEND GLideN64_SOURCES
-   TxFilterStub.cpp
-  )
-endif(NOT NOHQ)
+endif(NOHQ)
 
 if(UNIX)
   list(APPEND GLideN64_SOURCES ${GLideN64_SOURCES_UNIX})
@@ -233,17 +233,17 @@ if( CMAKE_BUILD_TYPE STREQUAL "Debug")
   )
 
   if(SDL)
-        if (NOT NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osald GLideNHQd )
-	else (NOT NOHQ)
+        if (NOHQ)
 	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osald )
-	endif (NOT NOHQ)
+	else (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osald GLideNHQd )
+	endif (NOHQ)
   else(SDL)
-	if (NOT NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osald GLideNHQd )
-	else (NOT NOHQ)
+	if (NOHQ)
 	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osald )
-	endif (NOT NOHQ)
+	else (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} PRIVATE ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osald GLideNHQd )
+	endif (NOHQ)
   endif(SDL)
 endif( CMAKE_BUILD_TYPE STREQUAL "Debug")
 
@@ -257,16 +257,16 @@ if( CMAKE_BUILD_TYPE STREQUAL "Release")
   )
 
   if(SDL)
-	if (NOT NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
-	else (NOT NOHQ)
+	if (NOHQ)
 	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osal )
-	endif (NOT NOHQ)
+	else (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${SDL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
+	endif (NOHQ)
   else(SDL)
-	if (NOT NOHQ)
-	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
-	else (NOT NOHQ)
+	if (NOHQ)
 	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osal )
-	endif (NOT NOHQ)
+	else (NOHQ)
+	  target_link_libraries(${GLideN64_DLL_NAME} ${OPENGL_LIBRARIES} ${FREETYPE_LIBRARIES} osal GLideNHQ )
+	endif (NOHQ)
   endif(SDL)
 endif( CMAKE_BUILD_TYPE STREQUAL "Release")
