--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,11 +8,13 @@ project( GLideN64 )
 
 set(GLideN64_SOURCES
   3DMath.cpp
+  BufferCopy/ColorBufferToRDRAM.cpp
   Combiner.cpp
   CommonPluginAPI.cpp
   Config.cpp
   CRC.cpp
   DepthBuffer.cpp
+  BufferCopy/DepthBufferToRDRAM.cpp
   F3D.cpp
   F3DDKR.cpp
   F3DEX.cpp
@@ -35,6 +37,7 @@ set(GLideN64_SOURCES
   N64.cpp
   OpenGL.cpp
   RDP.cpp
+  BufferCopy/RDRAMtoColorBuffer.cpp
   RSP.cpp
   S2DEX2.cpp
   S2DEX.cpp
@@ -75,7 +78,7 @@ if(MUPENPLUSAPI)
 	-DMUPENPLUSAPI
 		-DTXFILTER_LIB
   )
-  include_directories( inc )
+  include_directories( . inc )
   set(GLideN64_SOURCES_UNIX
 	MupenPlusPluginAPI.cpp
 	mupenplus/Config_mupenplus.cpp
