ColorBufferToRDRAM: move platform specfic code to separate classes.

--- a/projects/msvc12/GLideN64.vcxproj.filters
+++ b/projects/msvc12/GLideN64.vcxproj.filters
@@ -212,6 +212,9 @@
     <ClCompile Include="..\..\src\BufferCopy\RDRAMtoColorBuffer.cpp">
       <Filter>Source Files\BufferCopy</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\BufferCopy\ColorBufferToRDRAMDesktop.cpp">
+      <Filter>Source Files\BufferCopy</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\src\3DMath.h">
